--- a/src/boatprototype/Locker_Admin.form
+++ b/src/boatprototype/Locker_Admin.form
@@ -120,10 +120,13 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Add Boat Here:"/>
+            <TitledBorder title="Selected Locker:"/>
           </Border>
         </Property>
       </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Select Locker:"/>
+      </AccessibilityProperties>
 
       <Layout>
         <DimensionLayout dim="0">
