--- a/src/boatprototype/RaceSignIn.form
+++ b/src/boatprototype/RaceSignIn.form
@@ -386,6 +386,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="NameTxt">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NameTxtActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
